2010-06-06 Change the way we do split/dividend adjustments in
           finance.py to handle dividends and fix the zero division bug reported
           in sf bug 2949906.  Note that volume is not adjusted
           because the Yahoo CSV does not distinguish between share
           split and dividend adjustments making it near impossible to
           get volume adjustement right (unless we want to guess based
           on the size of the adjustment or scrape the html tables,
           which we don't) - JDH

2010-06-06 Updated dateutil to 1.5 and pytz to 2010h.

2010-06-02 Add error_kw kwarg to Axes.bar(). - EF

2010-06-01 Fix pcolormesh() and QuadMesh to pass on kwargs as
           appropriate. - RM

2010-05-18 Merge mpl_toolkits.gridspec into the main tree. - JJL

2010-05-04 Improve backend_qt4 so it displays figures with the
           correct size - DSD

2010-04-20 Added generic support for connecting to a timer for events. This
           adds TimerBase, TimerGTK, TimerQT, TimerWx, and TimerTk to
           the backends and a new_timer() method to each backend's
           canvas to allow ease of creating a new timer. - RM

2010-04-20 Added margins() Axes method and pyplot function. - EF

2010-04-18 update the axes_grid documentation. -JJL

2010-04-18 Control MaxNLocator parameters after instantiation,
           and via Axes.locator_params method, with corresponding
           pyplot function. -EF

2010-04-18 Control ScalarFormatter offsets directly and via the
           Axes.ticklabel_format() method, and add that to pyplot. -EF

2010-04-16 Add a close_event to the backends. -RM

2010-04-06 modify axes_grid examples to use axes_grid1 and axisartist. -JJL

2010-04-06 rebase axes_grid using axes_grid1 and axisartist modules. -JJL

2010-04-06 axes_grid toolkit is splitted into two separate modules,
           axes_grid1 and axisartist. -JJL

2010-04-05 Speed up import: import pytz only if and when it is