@@ -1,3 +1,7 @@
+2010-06-09 Allow Axes.grid to control minor gridlines; allow
+           Axes.grid and Axis.grid to control major and minor
+           gridlines in the same method call. - EF
+
 2010-06-06 Change the way we do split/dividend adjustments in
            finance.py to handle dividends and fix the zero division bug reported
            in sf bug 2949906.  Note that volume is not adjusted
